--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- kit awesome -->
+    <script
+      src="https://kit.fontawesome.com/417d4ebbcf.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Football</title>
 </head>
 <body>
@@ -146,7 +151,31 @@
     </main>
     <!--footer section-->
     <footer>
-        
+      <div class="container">
+        <div class="footer_info">
+          <img src="images/Logo.png" alt="Logo" />
+        </div>
+        <div class="footer_social">
+          <div class="social-inner">
+            <a href="" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="" target="_blank"
+              ><i class="fab fa-dribbble"></i
+            ></a>
+            <a href="" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a href="" target="_blank"
+              ><i class="fab fa-youtube"></i
+            ></a>
+          </div>
+
+          <div class="copyright">
+            Copyright &copy; 2022 Football
+          </div>
+        </div>
+      </div>
     </footer>
 </body>
 </html>
