--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,24 @@
     <!-- main section-->
     <main>
 
+       <!-- banner area -->
+       <section id="banner_area">
+        <div class="container">
+          <div class="banner-inner">
+            <div class="banner-left">
+              <h2>
+                Conmebol <br />
+                Copa America 2021
+              </h2>
+              <a  href=""  target="_blank" class="button" >Watch Live <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="banner-right">
+              <img src="images/banner.png" alt="banner" />
+            </div>
+          </div>
+        </div>
+      </section>
+
         <!-- players list -->
         <section>
             <div class="container">
