added heightlight feature

--- a/Index.html
+++ b/Index.html
@@ -166,6 +166,30 @@
                 </div>
             </div>
         </section>
+
+        <!-- Highlight featured section -->
+      <section id="featured_area">
+        <div class="container">
+          <div class="featured-inner">
+            <div class="featured-left">
+              <h2>
+                All Highlights <br />
+                Copa America 2021
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+              <a href="Index.html" class="button" target="_blank">Watch Live <i class="fas fa-arrow-right"></i
+              ></a>
+            </div>
+            <div class="featured-right">
+              <img src="images/match.png" alt="banner" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--footer section-->
     <footer>
