--- a/Index.html
+++ b/Index.html
@@ -190,6 +190,18 @@
           </div>
         </div>
       </section>
+      <section id="newsletter">
+        <div class="container">
+          <form class="newsletter_form">
+            <h1>Newsletter Signup</h1>
+            <div class="info">
+              <input type="text" placeholder="Your Name" />
+              <input type="email" placeholder="Your Email" />
+            </div>
+            <input type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </section>
     </main>
     <!--footer section-->
     <footer>
