--- a/Index.html
+++ b/Index.html
@@ -190,7 +190,10 @@
           </div>
         </div>
       </section>
-      <section id="newsletter">
+
+
+      <!-- newsteller sections -->
+        <section id="newsletter">
         <div class="container">
           <form class="newsletter_form">
             <h1>Newsletter Signup</h1>
@@ -203,6 +206,7 @@
         </div>
       </section>
     </main>
+    
     <!--footer section-->
     <footer>
       <div class="container">
